--- a/pooNearYou/index.html
+++ b/pooNearYou/index.html
@@ -2,13 +2,7 @@
 <html lang="en">
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <head>
-  <style>
-    #map {
-        width: 100%;
-        height: 400px;
-        background-color: grey;
-    }
-    </style>  
+  <link rel="stylesheet" type="text/css" href="style.css" media="screen"></style>  
   <title>My map</title>
 </head>
 
